--- a/src/main/resources/schemaSpy.css
+++ b/src/main/resources/schemaSpy.css
@@ -124,7 +124,6 @@ table {
 }
 
 .comment {
-  display: none;
   text-align: left;
 }
 
